# tablebridge-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
src/tablebridge/: __init__.py  config.py  db.py  server.py
tests/: conftest.py  test_config_and_server.py  test_db.py  test_validate_sql.py
