[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablebridge"
version = "0.1.0"
description = "An MCP server that turns a folder of CSV / Parquet / JSON files into one SQL-queryable source for your AI agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Michael Tierney" }]
keywords = ["mcp", "model-context-protocol", "duckdb", "sql", "csv", "parquet", "data-integration", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.2",
    "duckdb>=1.0",
]

[project.urls]
Homepage = "https://github.com/Michael-WhiteCapData/tablebridge-mcp"
Repository = "https://github.com/Michael-WhiteCapData/tablebridge-mcp"
Issues = "https://github.com/Michael-WhiteCapData/tablebridge-mcp/issues"

[project.scripts]
tablebridge = "tablebridge.server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/tablebridge"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC"]
